# open-semantic-map

./: .clang-format  README.md  shell.nix
routing/: CMakeLists.txt  cli.cc  extract_routes.cc  precompute.cc
routing/algorithms/: contraction.cc  contraction.h  dijkstra.cc  dijkstra.h  dijkstra_test.cc
routing/graph/: builder.cc  builder.h  contraction_info.cc  contraction_info.h  defs.h  edge.cc  edge.h  road_graph.cc  road_graph.h  simple_indexer.cc  simple_indexer.h  vertex.h
routing/tests/: contraction_info_io_test.cc  contraction_test.cc  dijkstra_test.cc  osm_object_test.cc  road_graph_test.cc  testdata.h.in
routing/tests/data/: adobe_wells.osm  adobe_wells_routes.osm
routing/utils/: extract_junction.cc  extract_junction.h  filter_bounding_box.cc  filter_bounding_box.h  filter_isolated_roads.cc  filter_isolated_roads.h  predicates.cc  predicates.h  split_road.cc  split_road.h
